不要コード削除、ダイアログボックスタイトル修正、その他リファクタリング

--- a/src/NewBranchDialog.ui
+++ b/src/NewBranchDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>New branch</string>
   </property>
   <widget class="QLineEdit" name="lineEdit_branch_name">
    <property name="geometry">
@@ -23,7 +23,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>80</x>
