--- a/src/MergeBranchDialog.ui
+++ b/src/MergeBranchDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Merge</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
