--- a/resources.qrc
+++ b/resources.qrc
@@ -6,11 +6,11 @@
         <file>image/push.svgz</file>
         <file>image/selall.svgz</file>
         <file>image/graphcolor.png</file>
-        <file>image/guitar.svgz</file>
         <file>image/pull.svgz</file>
         <file>image/clone.svgz</file>
         <file>image/fetch.svgz</file>
         <file>image/digits.png</file>
         <file>image/guitar.png</file>
+        <file>image/Guitar.svg</file>
     </qresource>
 </RCC>
