リファクタリング

--- a/src/FileHistoryWindow.ui
+++ b/src/FileHistoryWindow.ui
@@ -37,6 +37,9 @@
       <bool>false</bool>
      </property>
      <widget class="QTableWidget" name="tableWidget_log">
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
