リファクタリング、高速化、オブジェクト取得キャッシュを実装

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -253,7 +253,7 @@
              </font>
             </property>
             <property name="text">
-             <string>The Project</string>
+             <string>Unknown</string>
             </property>
            </widget>
           </item>
