--- a/src/CommitPropertyDialog.ui
+++ b/src/CommitPropertyDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Commit properties</string>
+   <string>Commit Properties</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
