--- a/src/FileDiffWidget.ui
+++ b/src/FileDiffWidget.ui
@@ -95,6 +95,25 @@
          </property>
         </widget>
        </item>
+       <item row="1" column="3">
+        <widget class="QToolButton" name="toolButton_fullscreen">
+         <property name="minimumSize">
+          <size>
+           <width>17</width>
+           <height>17</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>17</width>
+           <height>17</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </widget>
