ボタンサイズを調整

--- a/src/FileDiffWidget.ui
+++ b/src/FileDiffWidget.ui
@@ -97,16 +97,16 @@
        </item>
        <item row="1" column="3">
         <widget class="QToolButton" name="toolButton_fullscreen">
-         <property name="minimumSize">
-          <size>
-           <width>17</width>
-           <height>17</height>
-          </size>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
          <property name="maximumSize">
           <size>
-           <width>17</width>
-           <height>17</height>
+           <width>16</width>
+           <height>16</height>
           </size>
          </property>
          <property name="text">
