透過画像の背景を市松模様で塗るようにした

--- a/resources.qrc
+++ b/resources.qrc
@@ -14,5 +14,7 @@
         <file>image/Guitar.svg</file>
         <file>image/folder.png</file>
         <file>image/repository.png</file>
+        <file>image/maximize.png</file>
+        <file>image/transparent.png</file>
     </qresource>
 </RCC>
