--- a/resources.qrc
+++ b/resources.qrc
@@ -16,5 +16,6 @@
         <file>image/repository.png</file>
         <file>image/maximize.png</file>
         <file>image/transparent.png</file>
+        <file>image/file.png</file>
     </qresource>
 </RCC>
