--- a/src/CommitExploreWindow.ui
+++ b/src/CommitExploreWindow.ui
@@ -61,7 +61,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEdit_commit_id">
+       <widget class="ReadOnlyLineEdit" name="lineEdit_commit_id">
         <property name="frame">
          <bool>false</bool>
         </property>
@@ -85,7 +85,7 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLineEdit" name="lineEdit_author">
+       <widget class="ReadOnlyLineEdit" name="lineEdit_author">
         <property name="frame">
          <bool>false</bool>
         </property>
@@ -95,7 +95,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="lineEdit_date">
+       <widget class="ReadOnlyLineEdit" name="lineEdit_date">
         <property name="frame">
          <bool>false</bool>
         </property>
@@ -187,6 +187,11 @@
    <extends>QWidget</extends>
    <header>FileDiffWidget.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ReadOnlyLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>ReadOnlyLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
