--- a/src/CommitPropertyDialog.ui
+++ b/src/CommitPropertyDialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLineEdit" name="lineEdit_description">
+    <widget class="ReadOnlyLineEdit" name="lineEdit_description">
      <property name="frame">
       <bool>false</bool>
      </property>
@@ -34,7 +34,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit_date">
+      <widget class="ReadOnlyLineEdit" name="lineEdit_date">
        <property name="frame">
         <bool>false</bool>
        </property>
@@ -51,7 +51,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_author">
+      <widget class="ReadOnlyLineEdit" name="lineEdit_author">
        <property name="frame">
         <bool>false</bool>
        </property>
@@ -68,7 +68,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_mail">
+      <widget class="ReadOnlyLineEdit" name="lineEdit_mail">
        <property name="frame">
         <bool>false</bool>
        </property>
@@ -94,7 +94,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit_commit_id">
+    <widget class="ReadOnlyLineEdit" name="lineEdit_commit_id">
      <property name="frame">
       <bool>false</bool>
      </property>
@@ -111,7 +111,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QPlainTextEdit" name="plainTextEdit_parent_ids">
+    <widget class="ReadOnlyPlainTextEdit" name="plainTextEdit_parent_ids">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
@@ -152,6 +152,18 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ReadOnlyLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>ReadOnlyLineEdit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ReadOnlyPlainTextEdit</class>
+   <extends>QPlainTextEdit</extends>
+   <header>ReadOnlyPlainTextEdit.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>lineEdit_description</tabstop>
   <tabstop>lineEdit_date</tabstop>
