--- a/src/FilePropertyDialog.ui
+++ b/src/FilePropertyDialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLineEdit" name="lineEdit_repo">
+    <widget class="ReadOnlyLineEdit" name="lineEdit_repo">
      <property name="frame">
       <bool>false</bool>
      </property>
@@ -25,7 +25,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit_path">
+    <widget class="ReadOnlyLineEdit" name="lineEdit_path">
      <property name="frame">
       <bool>false</bool>
      </property>
@@ -35,7 +35,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit_id">
+    <widget class="ReadOnlyLineEdit" name="lineEdit_id">
      <property name="frame">
       <bool>false</bool>
      </property>
@@ -83,6 +83,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ReadOnlyLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>ReadOnlyLineEdit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
