コミットログ取得の際の日付制限を（とりあえず）止めた

--- a/src/SetRemoteUrlDialog.ui
+++ b/src/SetRemoteUrlDialog.ui
@@ -23,6 +23,9 @@
    </item>
    <item>
     <widget class="QTableWidget" name="tableWidget">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::NoSelection</enum>
      </property>
