--- a/src/CloneDialog.ui
+++ b/src/CloneDialog.ui
@@ -7,17 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>385</width>
-    <height>183</height>
+    <height>97</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <property name="sizeConstraint">
-    <enum>QLayout::SetFixedSize</enum>
-   </property>
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
@@ -48,7 +45,7 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="0">
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <spacer name="horizontalSpacer">
@@ -82,26 +79,8 @@
      </item>
     </layout>
    </item>
-   <item row="3" column="0">
-    <widget class="FileDiffWidget" name="widget_log" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>FileDiffWidget</class>
-   <extends>QWidget</extends>
-   <header>FileDiffWidget.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <tabstops>
   <tabstop>lineEdit_repo_location</tabstop>
   <tabstop>lineEdit_working_dir</tabstop>
