--- a/src/CloneDialog.ui
+++ b/src/CloneDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>385</width>
-    <height>97</height>
+    <width>466</width>
+    <height>100</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QFormLayout" name="formLayout">
+    <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -33,6 +33,13 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="2">
+      <widget class="QPushButton" name="pushButton_test">
+       <property name="text">
+        <string>&amp;Test</string>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -40,7 +47,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
+     <item row="1" column="1" colspan="2">
       <widget class="QLineEdit" name="lineEdit_working_dir"/>
      </item>
     </layout>
@@ -83,6 +90,7 @@
  </widget>
  <tabstops>
   <tabstop>lineEdit_repo_location</tabstop>
+  <tabstop>pushButton_test</tabstop>
   <tabstop>lineEdit_working_dir</tabstop>
   <tabstop>pushButton</tabstop>
   <tabstop>pushButton_2</tabstop>
