--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Guitar</string>
   </property>
+  <property name="animated">
+   <bool>false</bool>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_8">
     <property name="spacing">
@@ -93,7 +96,7 @@
           <string>Clone</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/clone.svgz</normaloff>:/image/clone.svgz</iconset>
          </property>
          <property name="iconSize">
@@ -128,7 +131,7 @@
           <string>Fetch</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/fetch.svgz</normaloff>:/image/fetch.svgz</iconset>
          </property>
          <property name="iconSize">
@@ -163,7 +166,7 @@
           <string>Pull</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/pull.svgz</normaloff>:/image/pull.svgz</iconset>
          </property>
          <property name="iconSize">
@@ -198,7 +201,7 @@
           <string>Push</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/push.svgz</normaloff>:/image/push.svgz</iconset>
          </property>
          <property name="iconSize">
@@ -581,7 +584,7 @@
                   <string>Unstage</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/unstage.svgz</normaloff>:/image/unstage.svgz</iconset>
                  </property>
                  <property name="iconSize">
@@ -610,7 +613,7 @@
                   <string>Select all</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/selall.svgz</normaloff>:/image/selall.svgz</iconset>
                  </property>
                  <property name="iconSize">
@@ -645,7 +648,7 @@
                   <string>Stage</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/stage.svgz</normaloff>:/image/stage.svgz</iconset>
                  </property>
                  <property name="iconSize">
@@ -674,7 +677,7 @@
                   <string>Commit</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/commit.svgz</normaloff>:/image/commit.svgz</iconset>
                  </property>
                  <property name="iconSize">
@@ -954,7 +957,7 @@
   </action>
   <action name="action_push">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset>
      <normaloff>:/image/push.svgz</normaloff>:/image/push.svgz</iconset>
    </property>
    <property name="text">
